# are-you-still-sitting

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml  serverless.yaml
backend/vision_backend/: login.py  main.py  processors.py
backend/vision_backend/controller/: app.py
backend/vision_backend/services/: call.py  user.py
vision-app/: .gitignore  pyproject.toml
vision-app/vision_app/: dataset.ipynb  model.ipynb  users.ipynb
vision-app/vision_app/.ipynb_checkpoints/: dataset-checkpoint.ipynb  model-checkpoint.ipynb  train-checkpoint.ipynb  users-checkpoint.ipynb
