[tool.poetry]
name = "vision_backend"
version = "0.1.0"
description = ""
authors = ["daviddecoding <daviddecoding@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.5"
twilio = "^7.16.4"
mangum = "^0.17.0"
boto3 = "^1.26.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
