[tool.poetry]
name = "vision-app"
version = "0.1.0"
description = ""
authors = ["daviddecoding <daviddecoding@gmail.com>"]
readme = "README.md"
packages = [{include = "vision_app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.2"
opencv-python = "^4.7.0.68"
importlib-metadata = "^6.0.0"
torch = "^1.13.1"
torchvision = "^0.14.1"
matplotlib = "^3.7.0"
pandas = "^1.5.3"
tqdm = "^4.64.1"
seaborn = "^0.12.2"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
labelimg = "^1.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
